Fix bookmark expansion logic and add smoke check

--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "check:pdf-bookmark-panel": "node scripts/check-pdf-bookmark-panel.mjs"
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.57.0",
